Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;
C13DRVAPI ERRVAL __stdcall C13_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkWipe(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkWr(LPUSHORT block,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardBoot(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardCloseAll(VOID);
C13DRVAPI ERRVAL __stdcall C13_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CardGetInfo(USHORT infotype,HCARD handleval);
C13DRVAPI LPCSTR __stdcall C13_CardGetInfos(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardGetParam(LPSTR cardstr,LPINT cardnum,LPINT devnum,LPULONG sizval,LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,LPUSHORT spdval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CardInit(VOID);
C13DRVAPI BOOL __stdcall C13_CardIsRunning(HCARD handleval);
C13DRVAPI HCARD __stdcall C13_CardOpenEx(LPCSTR cardname,INT cardnum);
C13DRVAPI HCARD __stdcall C13_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);
C13DRVAPI VOID __stdcall C13_CardResetEx(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardResume(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest(USHORT level,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest0(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest1(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest2(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardTest3(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CardTrigger(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdAddr(SCHNDX index,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdAlloc(INT count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdAllocEx(ULONG configval,INT count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdBaseRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdBaseWr(ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdClear(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCountRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCountWr(USHORT countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCtrlRd(SCHNDX index,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCurrRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCurrWr(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdInit(USHORT opcode,LPUSHORT block);
C13DRVAPI SCHNDX __stdcall C13_CmdInsert(LPUSHORT block,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdMaxRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdMaxWr(USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdShotWr(BOOL value,SCHNDX index,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdStackClear(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdStartRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdStartWr(USHORT addrval,HCARD handleval);
C13DRVAPI INT __stdcall C13_CmdTotalRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdTotalWr(INT countval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCall(ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCheck(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCheckEx(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommConfig(BOOL enableflag,USHORT command,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdL(LPULONG valueptr,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdW(LPUSHORT valueptr,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataWrL(ULONG value,ULONG addrval,HCARD handleval);