Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkWipe(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkWr(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardBoot@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardBoot(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardCloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardCloseAll();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardConfig(Int32 enableflag, UInt16 command, UInt16 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardGetInfo@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CardGetInfo(UInt16 infotype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardGetInfos@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_CardGetInfos(UInt32 handleval);
        public static string C13_CardGetInfos(UInt32 handleval) { return Marshal.PtrToStringAnsi(_C13_CardGetInfos(handleval)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardGetParam@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardGetParam(ref string cardstr, ref Int32 cardnum, ref Int32 devnum, ref UInt32 sizval, ref UInt16 memval, ref UInt16 ioval, ref UInt16 irqval, ref UInt16 spdval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardInit@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CardInit();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardIsRunning(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardOpenEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CardOpenEx(ref string cardname, Int32 cardnum);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardOpenExx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CardOpenExx(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardResetEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CardResetEx(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardResume(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardTest(UInt16 level, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTest0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardTest0(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTest1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardTest1(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTest2@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardTest2(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTest3@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardTest3(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CardTrigger(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CmdAddr(Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CmdAlloc(Int32 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CmdAllocEx(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdBaseRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CmdBaseRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdBaseWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdBaseWr(UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_CmdCountRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCtrlRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_CmdCtrlRd(Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCtrlWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdCtrlWr(UInt16 ctrlval, Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCurrRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_CmdCurrRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdCurrWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdCurrWr(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdInit(UInt16 opcode, ref UInt16 block);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdInsert(ref UInt16 block, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdMaxRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_CmdMaxRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdMaxWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdMaxWr(UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdRd(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdShotWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdShotWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdSkipWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdStackClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdStackClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdStartRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_CmdStartRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdStartWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdStartWr(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdTotalRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdTotalRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdTotalWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CmdTotalWr(Int32 countval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CmdWr(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommCall(UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommCheck(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommCheckEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommCheckEx(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommConfig(Int32 enableflag, UInt16 command, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataRdL(ref UInt32 valueptr, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataRdW(ref UInt16 valueptr, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
